Fix 1855 Replace traces iFrame with a Kiali React component
